--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
     <h1>This is your beginning, User.</h1>
 </body>
 <img src="images/TronGrid.jpg" alt="The Grid">
+<p>Radical, man.</p>
+
+<audio controls>
+    <source src="audio/EndofLine.mp3" type="audio/mpeg">
+</audio>
 </html>
