--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="images/TronGrid.jpg" alt="The Grid">
 <p>Radical, man.</p>
 
-<audio controls>
+<audio controls autoplay>
     <source src="audio/EndofLine.mp3" type="audio/mpeg">
 </audio>
 </html>
